--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </ul>
       </div>
 
-      <a href="https://t.me/ll_SEONGJIYUK_DEFAULTERS_ll" class="telegram-btn" target="_blank">Join My Telegram</a>
+      <a href="https://t.me/+D2YVmgJYPABkNGI9" class="telegram-btn" target="_blank">Join My Telegram</a>
     </div>
 
     <footer>© 2025 LIGHT. All rights reserved.</footer>
